--- a/doc/ace.tex
+++ b/doc/ace.tex
@@ -27,7 +27,7 @@ Alexander Hulpke and Greg Gamble, which is described in this manual.
 The interface links to an external binary and therefore is only usable
 under UNIX (see Section~"Installing the ACE Share Package" for how  to
 install {\ACE}).  It will not work  on  Windows  or the Macintosh.  It
-requires {\GAP}~4.2.
+requires at least {\GAP}~4.2.
 
 {\ACE} can be used through this interface in a variety  of  ways:
 
