--- a/doc/examples.tex
+++ b/doc/examples.tex
@@ -69,6 +69,310 @@ gap>
 The function  `FlushOptionsStack'  is  described  in  Section~"General
 Warnings regarding the Use of Options".
 
+After defining generators, we can do an enumeration:
+
+\beginexample
+gap> F:=FreeGroup("a","b");;
+gap> fgens:=GeneratorsOfGroup(F);
+[ a, b ]
+\endexample
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+*A first `ACEStats' example*
+
+By  default,  the  presentation  is  not  echoed;   use   the   `echo'
+(see~"option echo") option if you want that.  Also,  by  default,  the
+{\ACE} binary only prints a *results message*, but we won't  see  that
+unless   we   set   `InfoACE'   to   a   level   of   at    least    2
+(see~"SetInfoACELevel"):
+
+\beginexample
+gap> SetInfoACELevel(2);
+\endexample
+
+Calling `ACEStats' with arguments `fgens', `[]', `[]', defines a  free
+froup with 2 generators, since the second argument  defines  an  empty
+relator list; and since  the  third  argument  is  an  empty  list  of
+generators, the  subgroup  defined  is  trivial.  So  the  enumeration
+overflows:
+
+\beginexample
+ACEStats(fgens, [], []);
+#I  OVERFLOW (a=249998 r=83333 h=83333 n=249999; l=337 c=0.22; m=249998 t=2499\
+98)
+rec( index := 0, cputime := 22, cputimeUnits := "10^-2 seconds", 
+  activecosets := 249998, maxcosets := 249998, totcosets := 249998 )
+\endexample
+
+The  line  starting  with  \lq{}`\#I  ''  is  the  `Info'-ed  *results
+message* from {\ACE};  see  Appendix~"The  Meanings  of  ACE's  Output
+Messages" for details  on  what  it  means.  Observe  that  since  the
+enumeration overflowed, {\ACE}'s result message  has  been  translated
+into a {\GAP} record with `index' field 0.
+
+To dump  out  the  presentation  and  parameters  associated  with  an
+enumeration,  {\ACE}  provides  the  `sr'  (see~"option  sr")  option.
+However, you won't see output of this  command,  unless  you  set  the
+`InfoACELevel' to at least 3. Also, to ensure the reliability  of  the
+output of the `sr' option, an enumeration  should  *precede*  it;  for
+`ACEStats' (and `ACECosetTableFromGensAndRels') the directive  `start'
+(see~"option start") required to initiate an enumeration  is  inserted
+(automatically) after all the  user's  options,  except  if  the  user
+herself supplies an option that initiates an enumeration (namely,  one
+of `start' or `begin' (see~"option start"), `aep'  (see~"option  aep")
+or `rep' (see~"option rep")). Interactively,  we  will  see  that  the
+equivalent    of    the    `sr'     command     is     `ACEParameters'
+(see~"ACEParameters"),  which  gives  an   output   record   that   is
+immediately {\GAP}-usable. With the above  in  mind  let's  rerun  the
+enumeration and get {\ACE}'s dump of the presentation and parameters:
+
+\beginexample
+gap> SetInfoACELevel(3);     
+gap> ACEStats(fgens, [], [] : start, sr := 1);
+#I  ACE 3.000        Wed Aug 16 14:11:12 2000
+#I  =========================================
+#I  Host information:
+#I    name = boronia
+#I  OVERFLOW (a=249998 r=83333 h=83333 n=249999; l=337 c=0.22; m=249998 t=2499\
+98)
+#I    #-- ACE 3.000: Run Parameters ---
+#I  Group Name: G;
+#I  Group Generators: ab;
+#I  Group Relators: ;
+#I  Subgroup Name: H;
+#I  Subgroup Generators: ;
+#I  Wo:1000000; Max:249998; Mess:0; Ti:-1; Ho:-1; Loop:0;
+#I  As:0; Path:0; Row:1; Mend:0; No:0; Look:0; Com:10;
+#I  C:0; R:0; Fi:7; PMod:3; PSiz:256; DMod:4; DSiz:1000;
+#I    #--------------------------------
+#I  ***
+rec( index := 0, cputime := 22, cputimeUnits := "10^-2 seconds", 
+  activecosets := 249998, maxcosets := 249998, totcosets := 249998 )
+\endexample
+
+Observe that at `InfoACE' level 3, one also gets {\ACE}'s  banner.  We
+could have printed out the first few lines of the coset  table  if  we
+had wished, using the `print' (see~"option print") option, but note as
+with the `sr' option, an enumeration should *precede* it. Here's  what
+happens if you disregard this:
+
+\beginexample
+gap> SetInfoACELevel(3);                           
+gap> ACEStats(fgens, [], [] : print := [-1, 12]);
+#I  ACE 3.000        Wed Aug 16 14:24:54 2000
+#I  =========================================
+#I  Host information:
+#I    name = boronia
+#I  ** ERROR (continuing with next line)
+#I     no information in table
+#I  OVERFLOW (a=249998 r=83333 h=83333 n=249999; l=337 c=0.20; m=249998 t=2499\
+98)
+#I  ***
+rec( index := 0, cputime := 20, cputimeUnits := "10^-2 seconds", 
+  activecosets := 249998, maxcosets := 249998, totcosets := 249998 )
+\endexample
+
+Essentially, because {\ACE} had  not  done  an  enumeration  prior  to
+getting the `print' directive, it complained with an \lq{}`** ERROR'',
+recovered  and  went  on  with  the  `start'  directive  automatically
+inserted by the `ACEStats' command:  no  ill  effects  at  the  {\GAP}
+level, but also no table.
+
+Now, let's do what we should have done (to get those first  few  lines
+of the coset table), namely, insert  the  `start'  option  before  the
+`print' option:
+
+\beginexample
+gap> ACEStats(fgens, [], [] : start, print := [-1, 12]);
+#I  ACE 3.000        Wed Aug 16 14:37:21 2000
+#I  =========================================
+#I  Host information:
+#I    name = boronia
+#I  OVERFLOW (a=249998 r=83333 h=83333 n=249999; l=337 c=0.21; m=249998 t=2499\
+98)
+#I  co: a=249998 r=83333 h=83333 n=249999; c=+0.00
+#I   coset ||      a      A      b      B   order   rep've
+#I  -------+---------------------------------------------
+#I       1 ||      2      3      4      5
+#I       2 ||      6      1      7      8       0   a
+#I       3 ||      1      9     10     11       0   A
+#I       4 ||     12     13     14      1       0   b
+#I       5 ||     15     16      1     17       0   B
+#I       6 ||     18      2     19     20       0   aa
+#I       7 ||     21     22     23      2       0   ab
+#I       8 ||     24     25      2     26       0   aB
+#I       9 ||      3     27     28     29       0   AA
+#I      10 ||     30     31     32      3       0   Ab
+#I      11 ||     33     34      3     35       0   AB
+#I      12 ||     36      4     37     38       0   ba
+#I  ***
+rec( index := 0, cputime := 21, cputimeUnits := "10^-2 seconds", 
+  activecosets := 249998, maxcosets := 249998, totcosets := 249998 )
+\endexample
+
+The values we gave to the `print' option, told  {\ACE}  to  print  the
+first 12 lines and include coset  representatives.  Note  that,  since
+there are no relators, the table has separate  columns  for  generator
+inverses. So the default workspace of $1000000$ words allows  a  table
+of $249998 = 1000000/4 - 2$ cosets. Since row  `fill'ing  (see~"option
+fill") is on by default, the table is simply  filled  with  cosets  in
+order. Note that a compaction phase is done before printing the table,
+but that this does nothing here (the lowercase `co' tag), since  there
+are no dead cosets. The coset representatives are simply all  possible
+freely reduced words, in length plus lexicographic (i.e. `lenlex'; see
+Section~"Coset Table Standardisation Schemes") order.
+
+%We now set things up to do the alternating group on five  letters,  of
+%order $60$. We turn messaging on, but set the interval high enough  so
+%that there will be no progress messages.
+%
+%\begintt
+%Enum: A_5;
+%rel: a^2, b^3, ababababab;
+%subgr: trivial;
+%mess: 1000;    start;
+%\endtt
+%
+%The presentation and the parameters are  echoed,  the  enumeration  is
+%performed, and then the results of the run are printed. Note that  the
+%exponent of the `ababababab' word has been correctly deduced, and that
+%`a' is treated as an involution. So the table has only  three  columns
+%now. Definitions are HLT-style, and a total of $76$ cosets (incl.\ the
+%subgroup) were defined.
+%
+%\begintt
+%  #-- ACE 3.000: Run Parameters ---
+%Group Name: A_5;
+%Group Generators: ab;
+%Group Relators: (a)^2, (b)^3, (ab)^5;
+%Subgroup Name: trivial;
+%Subgroup Generators: ;
+%Wo:1000000; Max:333331; Mess:1000; Ti:-1; Ho:-1; Loop:0;
+%As:0; Path:0; Row:1; Mend:0; No:3; Look:0; Com:10;
+%C:0; R:0; Fi:6; PMod:3; PSiz:256; DMod:4; DSiz:1000;
+%  #--------------------------------
+%INDEX = 60 (a=60 r=77 h=1 n=77; l=3 c=0.00; m=66 t=76)
+%\endtt
+%
+%We now use a non-trivial subgroup, and monitor all the actions of  the
+%enumerator.
+%
+%\begintt
+%Subgroup Name: C_5 ;
+%gen:ab;
+%Monit :1
+%END;
+%  #-- ACE 3.000: Run Parameters ---
+%Group Name: A_5;
+%Group Generators: ab;
+%Group Relators: (a)^2, (b)^3, (ab)^5;
+%Subgroup Name: C_5;
+%Subgroup Generators: ab;
+%Wo:1000000; Max:333331; Mess:1; Ti:-1; Ho:-1; Loop:0;
+%As:0; Path:0; Row:1; Mend:0; No:3; Look:0; Com:10;
+%C:0; R:0; Fi:6; PMod:3; PSiz:256; DMod:4; DSiz:1000;
+%  #--------------------------------
+%AD: a=2 r=1 h=1 n=3; l=1 c=+0.00; m=2 t=2
+%SG: a=2 r=1 h=1 n=3; l=1 c=+0.00; m=2 t=2
+%RD: a=3 r=1 h=1 n=4; l=2 c=+0.00; m=3 t=3
+%RD: a=4 r=2 h=1 n=5; l=2 c=+0.00; m=4 t=4
+%RD: a=5 r=2 h=1 n=6; l=2 c=+0.00; m=5 t=5
+%RD: a=6 r=2 h=1 n=7; l=2 c=+0.00; m=6 t=6
+%RD: a=7 r=2 h=1 n=8; l=2 c=+0.00; m=7 t=7
+%RD: a=8 r=2 h=1 n=9; l=2 c=+0.00; m=8 t=8
+%RD: a=9 r=2 h=1 n=10; l=2 c=+0.00; m=9 t=9
+%CC: a=8 r=2 h=1 n=10; l=2 c=+0.00; d=0
+%RD: a=9 r=5 h=1 n=11; l=2 c=+0.00; m=9 t=10
+%RD: a=10 r=5 h=1 n=12; l=2 c=+0.00; m=10 t=11
+%RD: a=11 r=5 h=1 n=13; l=2 c=+0.00; m=11 t=12
+%RD: a=12 r=5 h=1 n=14; l=2 c=+0.00; m=12 t=13
+%RD: a=13 r=5 h=1 n=15; l=2 c=+0.00; m=13 t=14
+%RD: a=14 r=5 h=1 n=16; l=2 c=+0.00; m=14 t=15
+%CC: a=13 r=6 h=1 n=16; l=2 c=+0.00; d=0
+%CC: a=12 r=6 h=1 n=16; l=2 c=+0.00; d=0
+%INDEX = 12 (a=12 r=16 h=1 n=16; l=3 c=0.00; m=14 t=15)
+%\endtt
+%
+%We now dump out the statistics accumulated during the run. The run had
+%`a=12'  and  `t=15',  so  there  must  have  been  three  coincidences
+%(`qcoinc=3'). Of these, two were primary  coincidences  (`rdcoinc=2').
+%Since `t=15', there must have been fourteen coset definitions; one was
+%during the application of coset 1 (i.e., the subgroup) to the subgroup
+%generator (`apdefn=1'), and the remainder during  the  application  of
+%the cosets to the relators (`rddefn=13').
+%
+%\begintt
+%STATistics;
+%  #- ACE 3.000: Level 0 Statistics --
+%cdcoinc=0 rdcoinc=2 apcoinc=0 rlcoinc=0 clcoinc=0
+%  xcoinc=2 xcols12=4 qcoinc=3
+%  xsave12=0 s12dup=0 s12new=0
+%  xcrep=6 crepred=0 crepwrk=0 xcomp=0 compwrk=0
+%xsaved=0 sdmax=0 sdoflow=0
+%xapply=1 apdedn=1 apdefn=1
+%rldedn=0 cldedn=0
+%xrdefn=1 rddedn=5 rddefn=13 rdfill=0
+%xcdefn=0 cddproc=0 cdddedn=0 cddedn=0
+%  cdgap=0 cdidefn=0 cdidedn=0 cdpdl=0 cdpof=0
+%  cdpdead=0 cdpdefn=0 cddefn=0
+%  #----------------------------------
+%\endtt
+%
+%Note how the pre-printout compaction phase now  does  some  work  (the
+%upper-case `CO' tag), since there were coincidences,  and  hence  dead
+%cosets. Note how `b/B' have been used as the first two columns,  since
+%these must be occupied by  a  generator/inverse  pair  or  a  pair  of
+%involutions. The `a' column is also the  `A'  column,  as  `a'  is  an
+%involution.
+%
+%\begintt
+%  print  TABLE : -1, 12 ;
+%CO: a=12 r=13 h=1 n=13; c=+0.00
+% coset |      b      B      a   order   rep've
+%-------+--------------------------------------
+%     1 |      3      2      2
+%     2 |      1      3      1       3   B
+%     3 |      2      1      4       3   b
+%     4 |      8      5      3       5   ba
+%     5 |      4      8      6       2   baB
+%     6 |      9      7      5       5   baBa
+%     7 |      6      9      8       3   baBaB
+%     8 |      5      4      7       5   bab
+%     9 |      7      6     10       5   baBab
+%    10 |     12     11      9       3   baBaba
+%    11 |     10     12     12       2   baBabaB
+%    12 |     11     10     11       3   baBabab
+%\endtt
+%
+%If we define the generator order to be that of the columns,  then  the
+%table above is not in canonic form, and the coset representatives  are
+%not in order. We now standardise the table; note the compaction  phase
+%before standardisation, although it does nothing  in  this  particular
+%case. Note how, if we read through the table in row-major  order,  new
+%cosets are introduced using the smallest available  number,  and  that
+%the representatives are now in order and are minimal.
+%
+%\begintt
+%st;
+%co/ST: a=12 r=13 h=1 n=13; c=+0.00
+%pr:-1,12;
+%co: a=12 r=13 h=1 n=13; c=+0.00
+% coset |      b      B      a   order   rep've
+%-------+--------------------------------------
+%     1 |      2      3      3
+%     2 |      3      1      4       3   b
+%     3 |      1      2      1       3   B
+%     4 |      5      6      2       5   ba
+%     5 |      6      4      7       5   bab
+%     6 |      4      5      8       2   baB
+%     7 |      8      9      5       5   baba
+%     8 |      9      7      6       5   baBa
+%     9 |      7      8     10       3   babaB
+%    10 |     11     12      9       3   babaBa
+%    11 |     12     10     12       3   babaBab
+%    12 |     10     11     11       2   babaBaB
+%\endtt
+%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \Section{Example where ACE is made the Standard Coset Enumerator}
 
