--- a/doc/install.tex
+++ b/doc/install.tex
@@ -78,6 +78,8 @@ obtained from  the different `make.xyz' and  will be used  to create a
 `Makefile'.)  You  can replace  the source by  a newer  version before
 compiling.
 
+If you encounter problems in installation please read the `README'.
+
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \Section{Loading the ACE Share Package}
 
